--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.49.9",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
